[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/theme/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/font_body.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/atlas_controls.png" type="Texture" id=3]
[ext_resource path="res://game/gui/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/font_main.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxEmpty" id=285]

[sub_resource type="StreamTexture" id=175]
load_path = "res://.import/iconset_lerimama_theme.png-7ff4695cad905aee2e2e716d4a555101.stex"

[sub_resource type="AtlasTexture" id=286]
atlas = SubResource( 175 )
region = Rect2( 16, 16, 14, 16 )

[sub_resource type="AtlasTexture" id=287]
atlas = SubResource( 175 )
region = Rect2( 0, 16, 10, 16 )

[sub_resource type="StyleBoxFlat" id=288]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.494118, 0.517647, 0.545098, 1 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 2.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id=289]

[sub_resource type="StyleBoxEmpty" id=290]

[sub_resource type="StyleBoxLine" id=291]
color = Color( 1, 1, 1, 1 )
thickness = 2

[sub_resource type="AtlasTexture" id=292]
atlas = SubResource( 175 )
region = Rect2( 32, 0, 10, 10 )

[sub_resource type="StyleBoxEmpty" id=293]

[sub_resource type="StyleBoxFlat" id=294]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.494118, 0.517647, 0.545098, 1 )
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StreamTexture" id=295]
load_path = "res://.import/iconset_lerimama_theme.png-7ff4695cad905aee2e2e716d4a555101.stex"

[sub_resource type="AtlasTexture" id=152]
atlas = SubResource( 295 )
region = Rect2( 0, 4, 16, 8 )

[sub_resource type="StyleBoxTexture" id=296]
texture = SubResource( 152 )
region_rect = Rect2( 0, 0, 16, 8 )
margin_left = 3.34132
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0
modulate_color = Color( 0.494118, 0.517647, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=297]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=298]
atlas = SubResource( 175 )
region = Rect2( 16, 0, 16, 12 )
margin = Rect2( 4, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=299]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.901961 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 2.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=300]
bg_color = Color( 0, 0, 0, 0.862745 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[sub_resource type="StyleBoxLine" id=301]
color = Color( 1, 1, 1, 1 )
thickness = 2
vertical = true

[sub_resource type="Theme" id=194]
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0.494118, 0.517647, 0.545098, 1 )
Button/colors/font_color_disabled = Color( 0.494118, 0.517647, 0.545098, 0.470588 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/styles/disabled = SubResource( 285 )
Button/styles/focus = SubResource( 285 )
Button/styles/hover = SubResource( 285 )
Button/styles/normal = SubResource( 285 )
Button/styles/pressed = SubResource( 285 )
CheckBox/colors/font_color_focus = Color( 0.294118, 0.623529, 1, 1 )
CheckBox/colors/font_color_hover = Color( 0.996078, 0.976471, 0.545098, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 0.368627, 1, 0.662745, 1 )
CheckBox/colors/font_color_pressed = Color( 0.494118, 0.517647, 0.545098, 1 )
CheckBox/constants/hseparation = 4
CheckBox/icons/checked = SubResource( 286 )
CheckBox/icons/unchecked = SubResource( 287 )
CheckBox/styles/focus = SubResource( 288 )
CheckBox/styles/hover = SubResource( 288 )
CheckBox/styles/hover_pressed = SubResource( 288 )
CheckBox/styles/normal = SubResource( 289 )
CheckBox/styles/pressed = SubResource( 290 )
HSeparator/styles/separator = SubResource( 291 )
HSlider/icons/grabber = SubResource( 292 )
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = SubResource( 292 )
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 293 )
HSlider/styles/grabber_area_highlight = SubResource( 294 )
HSlider/styles/slider = SubResource( 296 )
Label/colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
Label/constants/line_spacing = 6
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0.72549, 0.737255, 0.764706, 1 )
LineEdit/styles/normal = SubResource( 297 )
OptionButton/colors/font_color = Color( 1, 1, 1, 0.901961 )
OptionButton/colors/font_color_focus = Color( 1, 1, 1, 0.901961 )
OptionButton/colors/font_color_hover = Color( 1, 1, 1, 0.901961 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/icons/arrow = SubResource( 298 )
OptionButton/styles/focus = SubResource( 299 )
OptionButton/styles/hover = SubResource( 299 )
OptionButton/styles/pressed = SubResource( 299 )
Panel/styles/panel = SubResource( 300 )
VSeparator/styles/separator = SubResource( 301 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 3 )
region = Rect2( 0, 98, 70, 46 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 3 )
region = Rect2( 80, 98, 70, 46 )

[sub_resource type="StreamTexture" id=181]
load_path = "res://.import/atlas_controls.png-75e6b40869d487066545840672dcb98d.stex"

[sub_resource type="AtlasTexture" id=302]
atlas = SubResource( 181 )
region = Rect2( 0, 0, 120, 86 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 3 )
region = Rect2( 10, 17, 22, 22 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 3 )
region = Rect2( 30, 40, 18, 18 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 10, 10 )

[sub_resource type="AtlasTexture" id=235]
atlas = ExtResource( 3 )
region = Rect2( 0, 154, 102, 22 )

[sub_resource type="AtlasTexture" id=236]
atlas = ExtResource( 3 )
region = Rect2( 114, 154, 22, 22 )

[sub_resource type="AtlasTexture" id=237]
atlas = ExtResource( 3 )
region = Rect2( 138, 154, 22, 22 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 3 )
region = Rect2( 0, 186, 22, 22 )
margin = Rect2( 0, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 3 )
region = Rect2( 85, 218, 22, 22 )
margin = Rect2( -2, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 3 )
region = Rect2( 24, 186, 22, 22 )
margin = Rect2( 0, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=187]
atlas = ExtResource( 3 )
region = Rect2( 109, 218, 22, 22 )
margin = Rect2( -2, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=188]
atlas = ExtResource( 3 )
region = Rect2( 48, 186, 22, 22 )
margin = Rect2( 0, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=189]
atlas = ExtResource( 3 )
region = Rect2( 42, 218, 41, 22 )
margin = Rect2( -2, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=190]
atlas = ExtResource( 3 )
region = Rect2( 72, 186, 22, 22 )
margin = Rect2( 0, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 3 )
region = Rect2( 0, 218, 40, 22 )
margin = Rect2( -2, 2, 0, 0 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Title" type="Label" parent="."]
margin_left = 322.0
margin_top = 94.0
margin_right = 960.0
margin_bottom = 126.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.952941, 0.356863, 0.498039, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Game title on pause"
align = 1

[node name="HSeparator" type="HSeparator" parent="Title"]
visible = false
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -3.0
margin_bottom = 5.0

[node name="Controls" type="Control" parent="."]
margin_left = 288.0
margin_top = 174.0
margin_right = 632.0
margin_bottom = 393.0

[node name="Title" type="Label" parent="Controls"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
anchor_right = 1.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 38 )
size_flags_horizontal = 3
theme = SubResource( 194 )
text = "Player controls"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Controls/Title"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -7.0
margin_right = -1.0
margin_bottom = -3.0

[node name="Keys" type="Control" parent="Controls"]
margin_top = 55.0
margin_right = 328.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 264, 104 )

[node name="Keyboard1" type="TextureRect" parent="Controls/Keys"]
margin_left = 96.0
margin_top = 53.0
margin_right = 166.0
margin_bottom = 99.0
texture = SubResource( 192 )

[node name="Keyboard2" type="TextureRect" parent="Controls/Keys"]
margin_top = 53.0
margin_right = 70.0
margin_bottom = 99.0
texture = SubResource( 193 )

[node name="Joypad" type="Control" parent="Controls/Keys"]
margin_left = 224.0
margin_top = 28.0
margin_right = 344.0
margin_bottom = 114.0
__meta__ = {
"_edit_group_": true
}

[node name="jp" type="TextureRect" parent="Controls/Keys/Joypad"]
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
margin_right = 120.0
margin_bottom = 86.0
texture = SubResource( 302 )

[node name="btns" type="TextureRect" parent="Controls/Keys/Joypad"]
margin_left = 10.0
margin_top = 17.0
margin_right = 32.0
margin_bottom = 39.0
texture = SubResource( 195 )

[node name="stick" type="TextureRect" parent="Controls/Keys/Joypad"]
visible = false
margin_left = 30.0
margin_top = 40.0
margin_right = 48.0
margin_bottom = 58.0
texture = SubResource( 196 )

[node name="btn" type="TextureRect" parent="Controls/Keys/Joypad"]
margin_left = 96.0
margin_top = 32.0
margin_right = 106.0
margin_bottom = 42.0
texture = SubResource( 197 )

[node name="Space2" type="TextureRect" parent="Controls/Keys"]
margin_top = 133.0
margin_right = 102.0
margin_bottom = 155.0
texture = SubResource( 235 )

[node name="Alt2" type="TextureRect" parent="Controls/Keys"]
margin_left = 109.0
margin_top = 133.0
margin_right = 131.0
margin_bottom = 155.0
texture = SubResource( 236 )

[node name="Ctrl" type="TextureRect" parent="Controls/Keys"]
margin_left = 138.0
margin_top = 133.0
margin_right = 160.0
margin_bottom = 155.0
texture = SubResource( 237 )

[node name="Line2D4" type="Line2D" parent="Controls/Keys"]
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
position = Vector2( -265, 221 )
points = PoolVector2Array( 380, -149, 368, -196 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
sharp_limit = 0.0
antialiased = true

[node name="Line2D6" type="Line2D" parent="Controls/Keys"]
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
position = Vector2( -298, 229 )
points = PoolVector2Array( 349, -157, 382, -204 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
sharp_limit = 0.0
antialiased = true

[node name="Line2D5" type="Line2D" parent="Controls/Keys"]
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
position = Vector2( -259, 221 )
points = PoolVector2Array( 496, -172, 445, -197 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
sharp_limit = 0.0
antialiased = true

[node name="DirKeys" type="Label" parent="Controls/Keys"]
margin_left = 81.0
margin_top = 3.0
margin_right = 192.0
margin_bottom = 21.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Direction keys"
autowrap = true

[node name="Line2D" type="Line2D" parent="Controls/Keys"]
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
position = Vector2( -149.302, 218.142 )
scale = Vector2( 0.913793, 1.00769 )
points = PoolVector2Array( 485.123, -66.6296, 517.953, -143.042 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
sharp_limit = 0.0
antialiased = true

[node name="Line2D2" type="Line2D" parent="Controls/Keys"]
modulate = Color( 0.494118, 0.517647, 0.545098, 1 )
position = Vector2( -367.895, 238 )
scale = Vector2( 1.17742, 1 )
points = PoolVector2Array( 503.554, -81, 452.595, -93 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
sharp_limit = 0.0
antialiased = true

[node name="BurstKey" type="Label" parent="Controls/Keys"]
margin_left = 232.0
margin_top = 147.0
margin_right = 309.0
margin_bottom = 165.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Burst key"

[node name="Shortcuts" type="Control" parent="."]
margin_left = 696.0
margin_top = 174.0
margin_right = 992.0
margin_bottom = 383.0

[node name="Title" type="Label" parent="Shortcuts"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_right = 296.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
size_flags_horizontal = 3
theme = SubResource( 194 )
text = "Shortcuts"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Shortcuts/Title"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -7.0
margin_right = -1.0
margin_bottom = -3.0

[node name="Mute" type="HBoxContainer" parent="Shortcuts"]
margin_top = 56.0
margin_right = 262.0
margin_bottom = 78.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true
}

[node name="M" type="TextureRect" parent="Shortcuts/Mute"]
margin_right = 22.0
margin_bottom = 22.0
texture = SubResource( 184 )

[node name="Label" type="Label" parent="Shortcuts/Mute"]
margin_left = 30.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "or"
align = 1

[node name="L1" type="TextureRect" parent="Shortcuts/Mute"]
margin_left = 55.0
margin_right = 77.0
margin_bottom = 22.0
texture = SubResource( 185 )

[node name="Label2" type="Label" parent="Shortcuts/Mute"]
margin_left = 85.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "to mute music"

[node name="Skip" type="HBoxContainer" parent="Shortcuts"]
margin_top = 104.0
margin_right = 262.0
margin_bottom = 126.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true
}

[node name="N" type="TextureRect" parent="Shortcuts/Skip"]
margin_right = 22.0
margin_bottom = 22.0
texture = SubResource( 186 )

[node name="Label" type="Label" parent="Shortcuts/Skip"]
margin_left = 30.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "or"
align = 1

[node name="R1" type="TextureRect" parent="Shortcuts/Skip"]
margin_left = 55.0
margin_right = 77.0
margin_bottom = 22.0
texture = SubResource( 187 )

[node name="Label2" type="Label" parent="Shortcuts/Skip"]
margin_left = 85.0
margin_top = 2.0
margin_right = 257.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "to skip current track"

[node name="Pause" type="HBoxContainer" parent="Shortcuts"]
margin_top = 152.0
margin_right = 296.0
margin_bottom = 174.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true
}

[node name="Esc" type="TextureRect" parent="Shortcuts/Pause"]
margin_right = 22.0
margin_bottom = 22.0
texture = SubResource( 188 )

[node name="Label" type="Label" parent="Shortcuts/Pause"]
margin_left = 30.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "or"
align = 1

[node name="Select" type="TextureRect" parent="Shortcuts/Pause"]
margin_left = 55.0
margin_right = 96.0
margin_bottom = 22.0
texture = SubResource( 189 )

[node name="Label2" type="Label" parent="Shortcuts/Pause"]
margin_left = 104.0
margin_top = 2.0
margin_right = 296.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "to pause/unpause game"

[node name="Enter" type="HBoxContainer" parent="Shortcuts"]
margin_top = 200.0
margin_right = 268.0
margin_bottom = 222.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true
}

[node name="Enter" type="TextureRect" parent="Shortcuts/Enter"]
margin_right = 22.0
margin_bottom = 22.0
texture = SubResource( 190 )

[node name="Label" type="Label" parent="Shortcuts/Enter"]
margin_left = 30.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "or"
align = 1

[node name="Start" type="TextureRect" parent="Shortcuts/Enter"]
margin_left = 55.0
margin_right = 95.0
margin_bottom = 22.0
texture = SubResource( 191 )

[node name="Label2" type="Label" parent="Shortcuts/Enter"]
margin_left = 103.0
margin_top = 2.0
margin_right = 262.0
margin_bottom = 20.0
theme = SubResource( 194 )
custom_fonts/font = ExtResource( 2 )
text = "to confirm selection"

[node name="Settings" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.0
margin_top = 446.0
margin_right = -288.0
margin_bottom = -192.0

[node name="Title" type="Label" parent="Settings"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
anchor_right = 1.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
size_flags_horizontal = 3
theme = SubResource( 194 )
text = "Game settings"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Settings/Title"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -7.0
margin_right = -1.0
margin_bottom = -3.0

[node name="GameMusicBtn" type="CheckButton" parent="Settings"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_top = 51.0
margin_right = 90.0
margin_bottom = 83.0
focus_neighbour_left = NodePath("../CameraShakeBtn")
focus_neighbour_right = NodePath("../GameMusicSlider")
focus_neighbour_bottom = NodePath("../../Menu/QuitBtn")
mouse_default_cursor_shape = 2
pressed = true
text = "Music"

[node name="GameMusicSlider" type="HSlider" parent="Settings"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 282.0
margin_top = 60.0
margin_right = 401.0
margin_bottom = 76.0
focus_neighbour_bottom = NodePath("../../Menu/RestartBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 8
min_value = -30.0
max_value = 10.0
step = 5.0
value = -20.0
__meta__ = {
"_edit_group_": true
}

[node name="Tick" type="Polygon2D" parent="Settings/GameMusicSlider"]
show_behind_parent = true
position = Vector2( 58, 5 )
color = Color( 0.513726, 0.513726, 0.513726, 1 )
polygon = PoolVector2Array( 0, 7, 0, -1, 2, -1, 2, 7 )

[node name="GameMusicVol" type="Label" parent="Settings/GameMusicSlider"]
margin_left = -168.0
margin_top = -4.0
margin_right = -10.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Music volume"

[node name="GameSfxBtn" type="CheckButton" parent="Settings"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 425.0
margin_top = 51.0
margin_right = 492.0
margin_bottom = 83.0
focus_neighbour_bottom = NodePath("../../Menu/PlayBtn")
mouse_default_cursor_shape = 2
pressed = true
text = "SFX"

[node name="CameraShakeBtn" type="CheckButton" parent="Settings"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 516.0
margin_top = 51.0
margin_right = 704.0
margin_bottom = 83.0
focus_neighbour_right = NodePath("../GameMusicBtn")
focus_neighbour_bottom = NodePath("../../Menu/PlayBtn")
mouse_default_cursor_shape = 2
pressed = true
text = "Camera Shake"

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 238.0
margin_right = 242.0
margin_bottom = 260.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="QuitBtn" type="Button" parent="Menu"]
margin_right = 226.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../../Settings/GameMusicBtn")
focus_neighbour_right = NodePath("../RestartBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "QUIT TO MAIN MENU"

[node name="RestartBtn" type="Button" parent="Menu"]
margin_left = 258.0
margin_right = 356.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../QuitBtn")
focus_neighbour_right = NodePath("../PlayBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "RESTART"

[node name="PlayBtn" type="Button" parent="Menu"]
margin_left = 388.0
margin_right = 482.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../RestartBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "PLAY ON"

[connection signal="toggled" from="Settings/GameMusicBtn" to="." method="_on_GameMusicBtn_toggled"]
[connection signal="value_changed" from="Settings/GameMusicSlider" to="." method="_on_GameMusicSlider_value_changed"]
[connection signal="toggled" from="Settings/GameSfxBtn" to="." method="_on_GameSfxBtn_toggled"]
[connection signal="toggled" from="Settings/CameraShakeBtn" to="." method="_on_CameraShakeBtn_toggled"]
[connection signal="pressed" from="Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Menu/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="Menu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
